{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 450,
  "lineage": "446b6a84-872b-83be-b003-aecb44457686",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01efb0fbc44353beb",
            "arn": "arn:aws:ec2:us-east-2:127214193754:elastic-ip/eipalloc-01efb0fbc44353beb",
            "domain": "vpc",
            "id": "eipalloc-01efb0fbc44353beb",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-22-150-50.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.150.50",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Elastic_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0884d2865dbe9de4b",
            "arn": "arn:aws:ec2:us-east-2:127214193754:instance/i-03b50e8143f05e4c3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03b50e8143f05e4c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "key_01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0794f49f74c58e451",
            "private_dns": "ip-172-31-17-64.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-038a185645dc31d7f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01a6fe622be973aa0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa777559e48dfa5b",
            "tags": {
              "Name": "Elasticsearch_Server_1"
            },
            "tags_all": {
              "Name": "Elasticsearch_Server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a6fe622be973aa0"
            ]
          },
          "dependencies": [
            "aws_security_group.ES_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.my_subnet_03",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Elasticsearch_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0884d2865dbe9de4b",
            "arn": "arn:aws:ec2:us-east-2:127214193754:instance/i-0d6e15cac62bab478",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6e15cac62bab478",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "key_01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-001992b9a91a9c87e",
            "private_dns": "ip-172-31-72-226.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.72.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080f00cb7d8936129",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01a6fe622be973aa0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ad25d8c88dda115",
            "tags": {
              "Name": "Elasticsearch_Server_2"
            },
            "tags_all": {
              "Name": "Elasticsearch_Server_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a6fe622be973aa0"
            ]
          },
          "dependencies": [
            "aws_security_group.ES_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.my_subnet_04",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0884d2865dbe9de4b",
            "arn": "arn:aws:ec2:us-east-2:127214193754:instance/i-0bd422f6e3c2a354b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd422f6e3c2a354b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "key_01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b6cb7ee6ceb23a9",
            "private_dns": "ip-172-31-43-126.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.126",
            "public_ip": "3.137.172.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b03d0517b5169c0a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-074ce23f796fd9ed9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0901110c085a52bdb",
            "tags": {
              "Name": "Bastion_Host"
            },
            "tags_all": {
              "Name": "Bastion_Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074ce23f796fd9ed9"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.my_subnet_01",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:internet-gateway/igw-018383d3c654d7403",
            "id": "igw-018383d3c654d7403",
            "owner_id": "127214193754",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-016711b90f13eecb8"
          },
          "dependencies": [
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01efb0fbc44353beb",
            "association_id": "eipassoc-0aa98e9cdfdd1414f",
            "connectivity_type": "public",
            "id": "nat-065d1b92a0a6cbe03",
            "network_interface_id": "eni-0552ef385b9a19390",
            "private_ip": "172.31.34.219",
            "public_ip": "3.22.150.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0901110c085a52bdb",
            "tags": {
              "Name": "NAT-Gateway"
            },
            "tags_all": {
              "Name": "NAT-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.my_subnet_01",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07607e937b22b20961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-065d1b92a0a6cbe03",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07607e937b22b2096",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.my_subnet_01",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-018383d3c654d7403",
            "id": "r-rtb-09cb613e48e309a801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09cb613e48e309a80",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:route-table/rtb-07607e937b22b2096",
            "id": "rtb-07607e937b22b2096",
            "owner_id": "127214193754",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-016711b90f13eecb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:route-table/rtb-09cb613e48e309a80",
            "id": "rtb-09cb613e48e309a80",
            "owner_id": "127214193754",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-016711b90f13eecb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055cfa8ee38f728b9",
            "route_table_id": "rtb-07607e937b22b2096",
            "subnet_id": "subnet-0fa777559e48dfa5b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.my_subnet_03",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a9fe8635583fd99",
            "route_table_id": "rtb-07607e937b22b2096",
            "subnet_id": "subnet-09ad25d8c88dda115"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.my_subnet_04",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0383663a7cbf7d03a",
            "route_table_id": "rtb-09cb613e48e309a80",
            "subnet_id": "subnet-0901110c085a52bdb"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.my_subnet_01",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adceda597b46d13b",
            "route_table_id": "rtb-09cb613e48e309a80",
            "subnet_id": "subnet-0b455d897d00eb353"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.my_subnet_02",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ES_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:security-group/sg-01a6fe622be973aa0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a6fe622be973aa0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074ce23f796fd9ed9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074ce23f796fd9ed9"
                ],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "terraform-20250320074630490300000005",
            "name_prefix": "terraform-",
            "owner_id": "127214193754",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ES_SG"
            },
            "tags_all": {
              "Name": "ES_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-016711b90f13eecb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:security-group/sg-074ce23f796fd9ed9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074ce23f796fd9ed9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250320074628483600000002",
            "name_prefix": "terraform-",
            "owner_id": "127214193754",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion_SG"
            },
            "tags_all": {
              "Name": "Bastion_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-016711b90f13eecb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-0901110c085a52bdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0901110c085a52bdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_subnet_01"
            },
            "tags_all": {
              "Name": "my_subnet_01"
            },
            "vpc_id": "vpc-016711b90f13eecb8"
          },
          "dependencies": [
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-0b455d897d00eb353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b455d897d00eb353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_subnet_02"
            },
            "tags_all": {
              "Name": "my_subnet_02"
            },
            "vpc_id": "vpc-016711b90f13eecb8"
          },
          "dependencies": [
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-0fa777559e48dfa5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa777559e48dfa5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Elasticsearch_my_subnet_03"
            },
            "tags_all": {
              "Name": "Elasticsearch_my_subnet_03"
            },
            "vpc_id": "vpc-016711b90f13eecb8"
          },
          "dependencies": [
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-09ad25d8c88dda115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ad25d8c88dda115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Elasticsearch_my_subnet_04"
            },
            "tags_all": {
              "Name": "Elasticsearch_my_subnet_04"
            },
            "vpc_id": "vpc-016711b90f13eecb8"
          },
          "dependencies": [
            "aws_vpc.Elasticsearch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Elasticsearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:vpc/vpc-016711b90f13eecb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-051a4d5b1848962ed",
            "default_route_table_id": "rtb-0195d47277d9d0d07",
            "default_security_group_id": "sg-02d93879f268441de",
            "dhcp_options_id": "dopt-0303b15f72fb3bca8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016711b90f13eecb8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0195d47277d9d0d07",
            "owner_id": "127214193754",
            "tags": {
              "Name": "Elasticsearch_VPC"
            },
            "tags_all": {
              "Name": "Elasticsearch_VPC"
            }
          }
        }
      ]
    }
  ]
}